--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   "dependencies": {
     "axios": "^0.16.1",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "jsonwebtoken": "^7.4.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "jsonwebtoken": "^7.4.3",
     "material-ui": "^0.18.1",
-    "mongoose": "^4.10.4",
+    "mongoose": "^4.13.11",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^15.6.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
-    "validator": "^7.0.0"
+    "validator": "^7.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
