--- a/package.json
+++ b/package.json
@@ -6,37 +6,40 @@
   "scripts": {
     "start": "node --use_strict index.js",
     "dev": "nodemon --use_strict index.js",
-    "bundle": "webpack"
+    "bundle": "webpack",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.1",
+    "babel": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jsonwebtoken": "^7.4.3",
-    "material-ui": "^0.18.1",
+    "material-ui": "^0.18.7",
     "mongoose": "^4.13.11",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "prop-types": "^15.5.10",
+    "prop-types": "^15.6.1",
     "react": "^15.6.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.6.2",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
+    "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^2.0.1",
     "validator": "^7.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "nodemon": "^1.11.0",
-    "webpack": "^2.6.1"
+    "nodemon": "^1.17.1",
+    "webpack": "^2.7.0",
+    "webpack-cli": "^2.0.10"
   }
 }
