--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --use_strict index.js",
+    "start": "npm-run-all --parallel watch:server watch:build",
     "dev": "nodemon --use_strict index.js",
+    "watch:build": "webpack --watch",
+    "watch:server": "nodemon \"./dist/index.js\" --watch \"./dist\"",
     "bundle": "webpack",
     "build": "webpack"
   },
@@ -20,6 +22,7 @@
     "jsonwebtoken": "^7.4.3",
     "material-ui": "^0.18.7",
     "mongoose": "^4.13.11",
+    "npm-run-all": "^4.1.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "prop-types": "^15.6.1",
