--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "css-loader": "^0.28.10",
     "express": "^4.16.2",
     "jsonwebtoken": "^7.4.3",
     "material-ui": "^0.18.7",
@@ -32,6 +33,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^2.0.1",
+    "style-loader": "^0.20.3",
     "validator": "^7.2.0"
   },
   "devDependencies": {
